--- a/README.html
+++ b/README.html
@@ -358,8 +358,9 @@ display: none;
 </div>
 
 
-<div id="hierarchical-modelling" class="section level1">
-<h1>Hierarchical-modelling</h1>
+<div id="overly-deep-hierarchical-mentalizing-produces-paranoia-a-new-formal-theory" class="section level1">
+<h1>Overly deep hierarchical mentalizing produces paranoia: a new formal
+theory</h1>
 <div id="intorduction" class="section level2">
 <h2>Intorduction</h2>
 <p>This accompanying code for <a href="https://osf.io/preprints/psyarxiv/szj5n">“Overly deep hierarchical
@@ -391,15 +392,13 @@ receiver_thresholds: [0.0]</code></pre>
 </div>
 <div id="citation" class="section level2">
 <h2>Citation</h2>
-If you refer to our work, please cite it as:
-<pre>
-@article{alon2024overly,
+<p>If you refer to our work, please cite it as:</p>
+<pre><code>@article{alon2024overly,
   title={Overly deep hierarchical mentalizing produces paranoia: a new formal theory},
   author={Alon, Nitay and Schulz, Lion and Bell, Vaughan and Moutoussis, Michael and Dayan, Peter and Barnby, Joseph M},
   year={2024},
   publisher={OSF}
-}
-</pre>
+}</code></pre>
 </div>
 </div>
 
